# Colosseum

./: .dockerignore  .editorconfig  .env.example  .env.vercel.example  .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  instrumentation.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
.claude/: README.md
.claude/commands/: execute-plan.md
.claude/rules/: code-quality-router.md  colosseum-core.md  deployment-router.md  git-router.md  superpowers-docs.md  ui-router.md
.cursor/commands/: deploy-production.md
.cursor/rules/: code-quality-router.mdc  colosseum-core.mdc  deployment-router.mdc  git-router.mdc  superpowers-docs.mdc  ui-router.mdc
app/: globals.css  layout.tsx  page.tsx
app/agents/: page.tsx
components/: ErrorBoundary.tsx  Toaster.tsx
docs/: A2A-A2UI-游戏配置页可行性调研报告.md  a2ui-dev-references.md  a2ui-enhancement-scenarios.md
lib/: env.ts
mcp-servers/vision-router/: .env.example  .gitignore  README.md  mcp-config.example.json  pyproject.toml  test-mcp-integration.py
mcp-servers/vision-router/src/vision_router_mcp/: __init__.py  config.py  models.py  server.py  utils.py
mcp-servers/vision-router/tests/: __init__.py  test_config.py  test_server.py  test_utils.py
old/: .dockerignore  .gitignore  README.md  package.json
scripts/: backup.sh  dev-bootstrap.mjs  dev-doctor.mjs  dev-sync.mjs  git-step-commit.mjs
store/: match-view-store.ts  replay-store.ts  thinking-store.ts
tests/: setup.ts  smoke.test.ts
(+604 files in other folders)
