[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vision-router-mcp"
version = "0.1.0"
description = "MCP server for routing vision tasks to MIMO multimodal model"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Colosseum Team" },
]
keywords = ["mcp", "vision", "mimo", "multimodal", "image-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
vision-router-mcp = "vision_router_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_router_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
